# provenance-template

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  QUICK-START.md  README.md  SECURITY.md  TEMPLATE.md  action.yml  flake.nix  justfile  pyproject.toml  requirements.in
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  ci_infra.yml  config.yml  docs_task.yml  feature_request.md  p0_gpg_signing.yml  p0_python_multiversion.yml  p0_real_dependencies.yml  p0_windows_automation.yml  p0_zero_coverage_appimage.yml  p0_zero_coverage_aur.yml  p0_zero_coverage_nix.yml  p1_arm64_multiarch.yml  p1_flatpak_phase2.yml  p1_github_packages_npm.yml  p1_github_packages_rubygems.yml  p1_macos_homebrew.yml  p1_multi_distro_matrix.yml  p1_pypi_devpi.yml  (+4 more)
config/: ci-platforms.yml
docs/: README.md  SNAPCRAFT-CREDENTIALS-SETUP.md  TESTING-RELEASES.md
scripts/: README-INIT.md  build_all_artifacts.sh  build_pyz.sh  build_winget.ps1  check_configuration.sh  check_licenses.sh  dev-setup.sh  init-template.py  quick_setup.sh  setup_local_config.sh  test-release.sh
tests/: __init__.py  conftest.py  template_utils.py  test_attestation_e2e.py  test_cli.py  test_cryptographic_integrity.py  test_demo_cli_verify_module.py  test_distribution_integration.py  test_distribution_validation.py  test_init_template.py  test_platform_configurations.py  test_published_distributions.py  test_runtime_security.py  test_security_pipeline.py  test_verification_enforcement.py
(+135 files in other folders)
